# AgentCompanyOS

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASE_v0.4.md  deny.toml  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.agent/: architecture_rules.md  coding_rules.md  commit_rules.md  ui_rules.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release.yml
.nwt/: .counter.json
.nwt/attachments/: e2e-harness.py
.nwt/indices/: files.json  tags.json
.nwt/timeline/: 000010.json  000011.json  000015.json  000017.json  000018.json  000019.json  000020.json  000021.json  000022.json  000028.json  000029.json  000032.json  000033.json  000034.json  000036.json  000039.json  000040.json  000041.json  000042.json  000043.json  000044.json  000049.json  000053.json  000056.json  000057.json  000058.json  000064.json  000065.json  000067.json  000072.json
.validation/: e2e_tauri_commands.ps1  gen_aco_icon.py
.validation/outputs/: critic_a_smoke.json
acceptance/ledger-task/backend/: server.js
acceptance/ledger-task/frontend/: index.html
apps/desktop/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx  simulator.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/nsis/: installer.nsi
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/tests/: e2e_nwt_standalone.rs
apps/desktop/src/components/: ConnectionBanner.tsx  ErrorBoundary.tsx  PerTaskConsole.tsx  PlanGraph.tsx  StartupScreen.tsx  Welcome.tsx
apps/desktop/src/hooks/: useEventStream.ts
apps/desktop/src/i18n/: en-US.ts  index.ts  zh-CN.ts
apps/desktop/src/lib/: api.ts  useConnection.ts  version.ts
apps/desktop/src/zones/: BottomConsole.tsx  CenterPanel.tsx  ChatZone.tsx  CommandDock.tsx  LeftRoster.tsx  PluginsPanel.tsx  RightPanel.tsx  Settings.tsx  TopBar.tsx
apps/html-frontend/: README.md  app.js  index.html
apps/runtime/: README.md  aco_runtime.spec  pyproject.toml
apps/runtime/src/aco_runtime/: __init__.py  main.py
config/: aco.toml  flowntier.toml  providers.toml  router.toml
crates/agent-core/: Cargo.toml
crates/agent-core/examples/: acceptance_admin.rs  orchestrated_planner.rs
crates/agent-core/src/: event.rs  lib.rs  loop_.rs  message.rs  workspace.rs
crates/agent-core/src/prompt/: mod.rs
crates/agent-core/src/provider/: openai.rs
crates/agent-core/src/tool/: bash.rs  grep.rs  mod.rs  patch.rs  read.rs  write.rs
crates/agent-core/tests/: e2e_agent_loop.rs
crates/claude-adapter/: Cargo.toml
crates/claude-adapter/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/event-bus/: Cargo.toml
crates/event-bus/src/: lib.rs
crates/pipe-server/: Cargo.toml
crates/pipe-server/src/: dispatcher.rs  handlers.rs  hexagrams.json  i_ching.rs  lib.rs  protocol.rs  server.rs  ws_bridge.rs
crates/pipe-server/src/secrets/: mod.rs
crates/pipe-server/tests/: e2e_pipe.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 0001_init.sql
crates/storage/src/: lib.rs
crates/tauri-core/: Cargo.toml
crates/tauri-core/src/: lib.rs
docs/: ACCEPTANCE_v0.3.md  ACCEPTANCE_v0.4.md  AGENT_PROTOCOL.md  API_INVENTORY.md  ARCHITECTURE.md  FAQ.md  INSTALLER.md  ROADMAP.md  SECURITY.md  TECH_STACK.md  V03_DELETIONS.md
plans/: Phase0.md  Phase1.md  Phase2.md  Phase3.md  Phase4.md  Phase5.md  ReleasePlan.md
prompts/: bootstrap.md  chief_agent.md  critic_a.md  critic_b.md  merger.md  planner.md  reporter.md  worker.md
runtime/: README.md  pyproject.toml
runtime/src/aco_runtime_lib/: __init__.py  event_bus.py
runtime/src/aco_runtime_lib/agents/: __init__.py  _json_extract.py  base.py  chief.py  critic.py  planner.py  worker.py  worker_v2.py
runtime/src/aco_runtime_lib/api/: __init__.py
runtime/src/aco_runtime_lib/memory/: __init__.py  project.py
runtime/src/aco_runtime_lib/plugins/: __init__.py  base.py
runtime/src/aco_runtime_lib/prompts/: __init__.py  renderer.py
runtime/src/aco_runtime_lib/providers/: __init__.py  anthropic.py  (+5 more)
runtime/tests/: __init__.py  test_e2e_workflow.py  test_event_bus.py  test_event_bus_drops.py  test_json_extract.py  test_orchestrator_timeout.py  test_persistence_crash.py  test_plan_parser.py  test_plan_validator.py  test_plugins.py  test_prompts.py  test_provider_stream.py  test_router_failover.py  test_state_machine.py
scripts/: kill_flowntier.cmd  snap_ai_run.js  snap_running.js
tools/: replace_in_files.py
(+16 files in other folders)
