[package]
name        = "claude-adapter"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
description = "Spawns the Claude Code CLI in a portable-pty and pipes output to the event bus"

[lints.clippy]
all = { level = "deny", priority = -1 }

[dependencies]
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
portable-pty = { workspace = true }
async-trait  = { workspace = true }
parking_lot  = { workspace = true }
event-bus    = { path = "../event-bus" }

[dev-dependencies]
insta        = { workspace = true }
tempfile     = "3"
