[package]
name        = "event-bus"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
description = "Typed pub/sub event bus for Flowntier (Rust core, Tauri webview)"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[dependencies]
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot  = { workspace = true }
ulid         = { workspace = true }
chrono       = { workspace = true }
async-trait  = { workspace = true }

[dev-dependencies]
insta        = { workspace = true }
tokio        = { workspace = true, features = ["test-util"] }
