[package]
name        = "pipe-server"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
description = "JSON-RPC + event-push server over a local IPC channel. Replaces apps/runtime/src/aco_runtime/pipe_server.py. Windows named pipes + Unix domain sockets."

[lints.clippy]
all      = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[dependencies]
tokio        = { workspace = true }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
futures      = "0.3"
scopeguard   = "1"

# Agent core: the pipe server dispatches tasks into the in-process
# agent runtime.
agent-core   = { path = "../agent-core" }

[dev-dependencies]
tokio        = { version = "1.40", features = ["full", "test-util"] }

[target.'cfg(windows)'.dependencies]
# Windows uses tokio's built-in named-pipe support.
tokio        = { version = "1.40", features = ["full"] }

[target.'cfg(not(windows))'.dependencies]
tokio        = { version = "1.40", features = ["full"] }
